--- a/src/app/films/films.component.html
+++ b/src/app/films/films.component.html
@@ -8,6 +8,7 @@
             <th>Nom</th>
             <th>Dureé en minutes</th>
             <th>Date Sortir</th>
+            <th>Genre</th>
           </tr>
         </thead>
         <tbody *ngFor="let film of films">
@@ -16,6 +17,7 @@
             <td>{{ film.nomFilm }}</td>
             <td>{{ film.dureeFilm }}</td>
             <td>{{ film.dateSortir | date : "dd/MM/yyyy" }}</td>
+            <td>{{ film.genre.nomGen }}</td>
             <td>
               <a class="btn btn-danger" (click)="supprimerFilm(film)"
                 >Supprimer</a
