--- a/src/app/add-film/add-film.component.html
+++ b/src/app/add-film/add-film.component.html
@@ -35,6 +35,20 @@
       class="form-control"
     />
   </div>
+  <div class="col-sm-4 col-md-4 col-lg-4">
+    <label>Genre</label>
+    <select
+      class="form-control form-control-lg"
+      id="idGen"
+      name="idGen"
+      [(ngModel)]="newIdGen"
+    >
+      <option *ngFor="let gen of genres" [value]="gen.idGen">
+        {{ gen.nomGen }}
+      </option>
+    </select>
+  </div>
+
   <div class="mt-2">
     <button type="submit" (click)="addFilm()" class="btn btn-success">
       Ajouter
