--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,12 +24,20 @@
             Produits
           </a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" routerLink="add-film">Ajouter</a>
+            <a
+              *ngIf="authService.isAdmin()"
+              class="dropdown-item"
+              routerLink="add-film"
+              >Ajouter</a
+            >
             <a class="dropdown-item" routerLink="/films">Lister</a>
           </div>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto">
+        <li>
+          <a class="nav-link">{{ authService.loggedUser }}</a>
+        </li>
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
@@ -37,11 +45,21 @@
             id="navbardrop"
             data-toggle="dropdown"
           >
-            [username]
+            Connexion
           </a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">login</a>
-            <a class="dropdown-item" href="#">logout</a>
+            <a
+              *ngIf="!authService.isloggedIn"
+              class="dropdown-item"
+              routerLink="login"
+              >login</a
+            >
+            <a
+              *ngIf="authService.isloggedIn"
+              class="dropdown-item"
+              (click)="onLogout()"
+              >logout</a
+            >
             <a class="dropdown-item" href="#">Profile</a>
           </div>
         </li>
